--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,8 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
+"./BumpSwitch.obj" \
+"./LidarSensors.obj" \
 "./LineSensors.obj" \
 "./MotorEncoder.obj" \
 "./SysTick.obj" \
@@ -156,8 +158,8 @@ MazeDrivers.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "LineSensors.obj" "MotorEncoder.obj" "SysTick.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
-	-$(RM) "LineSensors.d" "MotorEncoder.d" "SysTick.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
+	-$(RM) "BumpSwitch.obj" "LidarSensors.obj" "LineSensors.obj" "MotorEncoder.obj" "SysTick.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
+	-$(RM) "BumpSwitch.d" "LidarSensors.d" "LineSensors.d" "MotorEncoder.d" "SysTick.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
