Started creating a drive system class

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,6 +9,7 @@ GEN_CMDS__FLAG :=
 
 ORDERED_OBJS += \
 "./BumpSwitch.obj" \
+"./DriveSystem.obj" \
 "./LidarSensors.obj" \
 "./LineSensors.obj" \
 "./MotorEncoder.obj" \
@@ -158,8 +159,8 @@ MazeDrivers.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "BumpSwitch.obj" "LidarSensors.obj" "LineSensors.obj" "MotorEncoder.obj" "SysTick.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
-	-$(RM) "BumpSwitch.d" "LidarSensors.d" "LineSensors.d" "MotorEncoder.d" "SysTick.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
+	-$(RM) "BumpSwitch.obj" "DriveSystem.obj" "LidarSensors.obj" "LineSensors.obj" "MotorEncoder.obj" "SysTick.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
+	-$(RM) "BumpSwitch.d" "DriveSystem.d" "LidarSensors.d" "LineSensors.d" "MotorEncoder.d" "SysTick.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
